--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Your Project</title>
+    <title>Usermanager - User Manager dashboard in Laravel 4</title>
 
     <!-- Flatdoc -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -54,7 +54,7 @@
 
 <div class='header'>
     <div class='left'>
-        <h1>Your Project</h1>
+        <h1>Usermanager</h1>
         <ul>
             <li><a href='https://github.com/vrigzalejo/Usermanager'>View on GitHub</a></li>
             <li><a href='https://github.com/vrigzalejo/Usermanager/issues'>Issues</a></li>
